log

Thu 14 Mar 2024 03:22:15 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
b3f3ce8
Thu 14 Mar 2024 08:12:48 PM UTC: 
 exercises.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
a9a7e6d
Thu 14 Mar 2024 08:20:39 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
85a2582
Thu 14 Mar 2024 08:23:02 PM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|6
total_score: 10/70
f5a8224
Thu 14 Mar 2024 08:26:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
2fabb12
Thu 14 Mar 2024 08:28:55 PM UTC: 
 exercises.c | 16 ++++++----------
 1 file changed, 6 insertions(+), 10 deletions(-)
 tests:  0|5
total_score: 20/70
3e8682e
Thu 14 Mar 2024 08:31:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
c38f2a5
Thu 14 Mar 2024 08:43:19 PM UTC: 
 exercises.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d1d4588
Thu 14 Mar 2024 08:44:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
fca69a0
Thu 14 Mar 2024 08:45:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
069a013
Thu 14 Mar 2024 08:48:24 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
e02263e
Thu 14 Mar 2024 09:06:31 PM UTC: 
 exercises.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
Thu 14 Mar 2024 09:06:55 PM UTC: 
 exercises.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
Thu 14 Mar 2024 09:07:38 PM UTC: 
 exercises.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:122:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  122 |   return result;
      |          ^~~~~~
exercises.c:90:6: note: declared here
   90 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2,
      |      ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cf932dd
Thu 14 Mar 2024 09:08:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:122:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  122 |   return *result;
      |          ^~~~~~~
exercises.c:90:6: note: declared here
   90 | void mergeSortedArrays(int arr1[], int size1, int arr2[], int size2,
      |      ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6c5929a
Thu 14 Mar 2024 09:08:14 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
Thu 14 Mar 2024 09:08:40 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Thu 14 Mar 2024 09:09:41 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Thu 14 Mar 2024 09:12:03 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
10a7147
Thu 14 Mar 2024 09:16:40 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:133:1: error: data definition has no type or storage class [-Werror]
  133 | free(result);
      | ^~~~
exercises.c:133:1: error: type defaults to ‘int’ in declaration of ‘free’ [-Werror=implicit-int]
exercises.c:133:1: error: parameter names (without types) in function declaration [-Werror]
exercises.c:133:1: error: conflicting types for ‘free’; have ‘int()’
In file included from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:555:13: note: previous declaration of ‘free’ with type ‘void(void *)’
  555 | extern void free (void *__ptr) __THROW;
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
4491874
Thu 14 Mar 2024 09:16:50 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|3
total_score: 40/70
ed02296
Fri 15 Mar 2024 03:18:41 AM UTC: 
 exercises.c | 35 ++++++++++++++++++++++++++++++++++-
 1 file changed, 34 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
1ea7e44
Fri 15 Mar 2024 03:18:57 AM UTC: 
 exercises.c | 24 ------------------------
 1 file changed, 24 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:148:1: error: control reaches end of non-void function [-Werror=return-type]
  148 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7bc769e
Sat 16 Mar 2024 02:52:18 AM UTC: 
 exercises.c | 29 +++++++++++++++++++++++++----
 1 file changed, 25 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:169:1: error: control reaches end of non-void function [-Werror=return-type]
  169 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c924411
Sat 16 Mar 2024 02:54:59 AM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|2
total_score: 50/70
8a490e5
Sat 16 Mar 2024 06:50:59 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|1
total_score: 60/70
cd9218c
Sat 16 Mar 2024 07:04:30 PM UTC: 
 exercises.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  0|1
total_score: 60/70
7ff693a
Sat 16 Mar 2024 07:05:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
total_score: 70/70
2d1daef
Sat 16 Mar 2024 07:08:25 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
total_score: 70/70
8e36ea9
